feat: Migrate task processing from RQ to Redis Streams and introduce a new ASR Electron application.

--- a/ASR_server/.env.example
+++ b/ASR_server/.env.example
@@ -19,6 +19,11 @@ RQ_QUEUE_NAME=asr-queue
 RQ_WORKER_COUNT=2
 RQ_WORKER_TIMEOUT=600
 
+# Redis Streams 配置
+STREAM_NAME=asr_tasks
+CONSUMER_GROUP=asr_workers
+WORKER_COUNT=2
+
 # API 配置
 API_HOST=0.0.0.0
 API_PORT=8001
