--- a/ASR_electron/.gitignore
+++ b/ASR_electron/.gitignore
@@ -1,5 +1,6 @@
 # Logs
-logs
+logs/
+!logs/.gitkeep
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -28,11 +29,17 @@ release
 *.sln
 *.sw?
 
+
 # Audio Files
 *.wav
 *.mp3
 *.pcm
+*.raw
+*.raw
+debug_audio/
+!debug_audio/.gitkeep
 
 # Models
 *.onnx
+!public/models/model.onnx
 *.bin
