--- a/ASR_electron/package.json
+++ b/ASR_electron/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "electron-store": "^11.0.2",
     "onnxruntime-node": "^1.23.2",
     "onnxruntime-web": "^1.23.2",
@@ -38,5 +39,10 @@
     "vite-plugin-static-copy": "^3.1.4",
     "ws": "^8.18.3"
   },
-  "main": "dist-electron/main.js"
+  "main": "dist-electron/main.js",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "electron"
+    ]
+  }
 }
