--- a/ASR_electron/package.json
+++ b/ASR_electron/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "electron-log": "^5.4.3",
     "electron-store": "^11.0.2",
     "onnxruntime-node": "^1.23.2",
     "onnxruntime-web": "^1.23.2",
@@ -37,6 +39,7 @@
     "vite-plugin-electron": "^0.28.6",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-static-copy": "^3.1.4",
+    "vitest": "^4.0.15",
     "ws": "^8.18.3"
   },
   "main": "dist-electron/main.js",
