--- a/ASR_electron/package.json
+++ b/ASR_electron/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "electron-log": "^5.4.3",
     "electron-store": "^11.0.2",
+    "lucide-react": "^0.560.0",
     "onnxruntime-node": "^1.23.2",
     "onnxruntime-web": "^1.23.2",
     "react": "^18.2.0",
