--- a/ASR_server/pyproject.toml
+++ b/ASR_server/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "pytest>=7.0.0",
     "httpx>=0.25.0",
+    "psutil>=5.9.0",
 ]
 
 [[tool.uv.index]]
