--- a/ASR_go_backend/docker/docker-compose-postgres.yml
+++ b/ASR_go_backend/docker/docker-compose-postgres.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=123456
-      - POSTGRES_DB=katydid
+      - POSTGRES_DB=kikipounamu
     volumes:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
