--- a/ASR_electron/package.json
+++ b/ASR_electron/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "tsx": "^4.21.0",
     "typescript": "^5.2.2",
+    "unocss": "^66.5.10",
     "uuid": "^13.0.0",
     "vite": "^5.1.6",
     "vite-plugin-electron": "^0.28.6",
