feat: Introduce ASR system with cross-platform components and comprehensive deployment documentation, alongside minor README updates.

--- a/ASR_server/pyproject.toml
+++ b/ASR_server/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     
     "funasr",
     "modelscope",
+    "huggingface_hub",  # 海外网络需要从 HuggingFace 下载模型
     
     # Web Framework & Task Queue
     "fastapi>=0.115.0",
