--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,98 @@
+# General
 .DS_Store
+Thumbs.db
 *.log
+*.tmp
+tmp/
+temp/
+
+# IDE & Editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*.sublime-workspace
+*.sublime-project
+
+# Environment & Secrets
+.env
+.env.*
+!.env.example
+*.pem
+*.key
+*.crt
+id_rsa
+id_rsa.pub
+
+# Python (ASR_server and root)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+.coverage
+htmlcov/
+.pytest_cache/
+.mypy_cache/
+
+# Virtual Environments
+.venv/
+venv/
+env/
+ENV/
+
+# Node.js / Electron (ASR_electron)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.npm/
+.cache/
+ASR_electron/dist/
+ASR_electron/out/
+ASR_electron/build/
+ASR_electron/coverage/
+
+# Go (ASR_go_backend)
+# Binaries
+ASR_go_backend/bin/
+ASR_go_backend/dist/
+*.exe
+*.test
+*.prof
+# Go specific
+vendor/
+
+# Redis
+*.rdb
+*.aof
+
+# OS Generated
+*.deb
+
+# Project Specific / Temporary
 # Temporarily ignore other microservices
 ASR_pc_front/
 my_ququ/
 
-# Redis
-*.aof
-*.rdb
+# Logs and Data
+logs/
+data/
